src/objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Notes__c</fullName>
        <label>Credit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Discontinued/Backordered Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Tax Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order/Promo/Price Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction (ie: Make Good)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW Bonus Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged/Undeliverable/ Post-ship Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Method__c</fullName>
        <label>Reimbursement Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Credit</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_Currency_Match_Customer</fullName>
        <active>true</active>
        <description>Validates that the Credit Amount is the same currency as the Customer Currency.</description>
        <errorConditionFormula>TEXT (CurrencyIsoCode) &lt;&gt; TEXT(Account__r.CurrencyIsoCode)</errorConditionFormula>
        <errorMessage>The Credit currency must match the Customer&apos;s currency.</errorMessage>
    </validationRules>
</CustomObject>